Изменена логика работы генератора чисел и доработан простой уникальный генератор
Теперь вся повторяющаяся логика вынесена в абстрактный класс, а в конкретных генератрах реализуется только специфичная для типа данных логика